--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -16,6 +16,9 @@ html(lang='en')
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
 
+        // Academicons
+        link(rel="stylesheet", href="assets/css/academicons.min.css")
+
         // SimpleLightbox plugin CSS
         link(href='assets/css/simpleLightbox.min.css', rel='stylesheet')
 
