--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -36,3 +36,13 @@ a {
         text-decoration: none;
     }
 }
+
+.professional-icons {
+    color: fade-out($white, 0.25) !important;
+    transition: all 0.2s ease-in-out;
+}
+
+.professional-icons:hover {
+    color: $white !important;
+    transform: scale(1.25);
+    }
