--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -19,6 +19,9 @@ html(lang='en')
         // Academicons
         link(rel="stylesheet", href="assets/css/academicons.min.css")
 
+        // Icomoon
+        link(rel="stylesheet", href="assets/css/icomoon.css", type="text/css")
+
         // SimpleLightbox plugin CSS
         link(href='assets/css/simpleLightbox.min.css', rel='stylesheet')
 
@@ -56,7 +59,7 @@ html(lang='en')
                             | Welcome to my website! I'm a professor of mathematics at the University of Seville. Here, you'll mostly find information about my research.
                         p.mb-5
                         {% for network in social %}
-                            a.ai.{{ network.icon }}.ai-3x.mx-2.professional-icons(href="{{ network.link }}", title="{{ network.name }}")
+                            a.ai.{{ network.icon }}.ai-2x.mx-2.professional-icons(href="{{ network.link }}", title="{{ network.name }}")
                         {% endfor %}
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
