--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,6 +19,9 @@ html(lang='en')
         // Academicons
         link(rel="stylesheet", href="assets/css/academicons.min.css")
 
+        // Icomoon
+        link(rel="stylesheet", href="assets/css/icomoon.css", type="text/css")
+
         // SimpleLightbox plugin CSS
         link(href='assets/css/simpleLightbox.min.css', rel='stylesheet')
 
@@ -56,19 +59,23 @@ html(lang='en')
                             | Welcome to my website! I'm a professor of mathematics at the University of Seville. Here, you'll mostly find information about my research.
                         p.mb-5
                         
-                            a.ai.ai-arxiv.ai-3x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", title="arXiv")
+                            a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", title="zbMath")
                         
-                            a.ai.ai-mathoverflow.ai-3x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", title="MathOverflow")
+                            a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", title="MathSciNet")
                         
-                            a.ai.ai-orcid.ai-3x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", title="ORCID")
+                            a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", title="arXiv")
                         
-                            a.ai.ai-clarivate.ai-3x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", title="Web of Science")
+                            a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", title="Google Scholar")
                         
-                            a.ai.ai-scopus.ai-3x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", title="Scopus")
+                            a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", title="MathOverflow")
                         
-                            a.ai.ai-zotero.ai-3x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", title="Zotero")
+                            a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", title="ORCID")
                         
-                            a.ai.ai-google-scholar.ai-3x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", title="Google Scholar")
+                            a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", title="Web of Science")
+                        
+                            a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", title="Scopus")
+                        
+                            a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", title="Zotero")
                         
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
