link to page top in my name in copyright

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -216,7 +216,9 @@ html(lang='en')
         footer.py-5
             .container.px-4.px-lg-5
                 .small.text-center.text-muted
-                    | Copyright &copy; 2024 - Fernando Muro. Powered by
+                    | Copyright &copy; 2024 - 
+                    a(href="#page-top") Fernando Muro
+                    |. Powered by
                     a(href='https://startbootstrap.com') Start Bootstrap
                     | with
                     a(href='https://startbootstrap.com/theme/creative') Creative
