--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -39,11 +39,9 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto.my-2.my-lg-0
                         li.nav-item
-                            a.nav-link(href='#about') About
+                            a.nav-link(href='#research') Research
                         li.nav-item
-                            a.nav-link(href='#services') Services
-                        li.nav-item
-                            a.nav-link(href='#portfolio') Portfolio
+                            a.nav-link(href='#portfolio') Gallery
                         li.nav-item
                             a.nav-link(href='#contact') Contact
 
@@ -63,10 +61,10 @@ html(lang='en')
                         {% endfor %}
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
-        // Services
-        section#services.page-section
+        // Research
+        section#research.page-section
             .container.px-4.px-lg-5
-                h2.text-center.mt-0 At Your Service
+                h2.text-center.mt-0 Papers, preprints, slides...
                 hr.divider
                 .row.gx-4.gx-lg-5
                     .col-lg-3.col-md-6.text-center
