start research section

--- a/src/pug/index.j2
+++ b/src/pug/index.j2
@@ -66,6 +66,8 @@ html(lang='en')
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 Papers, preprints, slides...
                 hr.divider
+                p.text-muted.mb-3.mx-5.text-center
+                    | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
                 .row.gx-4.gx-lg-5
                     .col-lg-3.col-md-6.text-center
                         .mt-5
