--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -82,6 +82,8 @@ html(lang='en')
             .container.px-4.px-lg-5
                 h2.text-center.mt-0 Papers, preprints, slides...
                 hr.divider
+                p.text-muted.mb-3.mx-5.text-center
+                    | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
                 .row.gx-4.gx-lg-5
                     .col-lg-3.col-md-6.text-center
                         .mt-5
@@ -150,8 +152,8 @@ html(lang='en')
                                     | Triangulated Categories in Representation Theory and Beyond, Ålesund, 2022
                     
                     .col-lg-4.col-sm-6
-                        a.portfolio-box(href='assets/img/portfolio/fullsize/bonn2022.webp', width='1300', height='700', title='Algebraic Topology, in memory of Hans-Joachim Baues, Bonn, 2022')
-                            img.img-fluid(src='assets/img/portfolio/thumbnails/bonn2022.webp', width='650', height='350', alt='...')
+                        a.portfolio-box(href='assets/img/portfolio/fullsize/bonn.webp', width='1300', height='700', title='Algebraic Topology, in memory of Hans-Joachim Baues, Bonn, 2022')
+                            img.img-fluid(src='assets/img/portfolio/thumbnails/bonn.webp', width='650', height='350', alt='...')
                             .portfolio-box-caption
                                 .project-category.text-white-50
                                     | Conference
