bib inline links

--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -1,18 +1,19 @@
-{% for paper in input -%}
- li {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}, {% endif %}{% endfor %}#[strong {{ paper.title }}], {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
-{% if paper.DOI -%}
-    a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
-{% endif -%}
-{% if paper.book -%}
-    a.paper-link book
-{% endif -%}
-{% if paper.URL -%}
-    a.paper-link(href="http://{{ paper.URL }}") paper
-{% endif -%}
-{% if paper.arxiv -%}
-    a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
-{% endif -%}
-{% if paper['zbmath_url'] -%}
-    a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
-{% endif -%}
-{% endfor -%}
+{% for paper in input %}
+li 
+    | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}, {% endif %}{% endfor %}#[strong {{ paper.title }}], {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
+    {% if paper.DOI -%}
+        a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
+    {% endif -%}
+    {% if paper.book -%}
+        a.paper-link book
+    {% endif -%}
+    {% if paper.URL -%}
+        a.paper-link(href="http://{{ paper.URL }}") paper
+    {% endif -%}
+    {% if paper.arxiv -%}
+        a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
+    {% endif -%}
+    {% if paper['zbmath_url'] -%}
+        a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
+    {% endif -%}
+{% endfor %}
