--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -49,3 +49,21 @@
   font-weight: 900;
   font-style: italic;
 }
+
+@font-face {
+  font-family: 'Merriweather';
+}
+
+$font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+$font-family-serif: "Merriweather", -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+$font-family-base: $font-family-serif;
+
+$headings-font-family: $font-family-sans-serif;
+
+$btn-font-family: $font-family-sans-serif;
