--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -2,6 +2,77 @@
 // Typography
 //
 
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  src: url('../assets/fonts/webfonts/Merriweather[opsz,wdth,wght].woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Merriweather';
+  font-style: italic;
+  src: url('../assets/fonts/webfonts/Merriweather-Italic[opsz,wdth,wght].woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Merriweather-Sans';
+  font-style: normal;
+  src: url('../assets/fonts/webfonts/Merriweather-Sans.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Merriweather-Sans';
+  font-style: italic;
+  src: url('../assets/fonts/webfonts/Merriweather-Sans-Italic.woff2') format('woff2');
+}
+
+.merriweather-light {
+  font-family: "Merriweather", serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.merriweather-regular {
+  font-family: "Merriweather", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.merriweather-bold {
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.merriweather-black {
+  font-family: "Merriweather", serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.merriweather-light-italic {
+  font-family: "Merriweather-Italic", serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.merriweather-regular-italic {
+  font-family: "Merriweather-Italic", serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.merriweather-bold-italic {
+  font-family: "Merriweather-Italic", serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.merriweather-black-italic {
+  font-family: "Merriweather-Italic", serif;
+  font-weight: 900;
+  font-style: italic;
+}
 
 @font-face {
     font-family: 'Merriweather';
@@ -24,9 +95,9 @@
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
 
-$font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif: "Merriweather-Sans", -apple-system, BlinkMacSystemFont,
+  "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
 $font-family-serif: "Merriweather", -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
