--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -28,6 +28,11 @@ html(lang='en')
         // Core theme CSS (includes Bootstrap)
         link(href='css/styles.css', rel='stylesheet')
 
+        // MathJax
+        script(src="js/mathjax-config.js", defer)
+        script(type="text/javascript", id="MathJax-script", defer, src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js")
+
+
     body#page-top
 
         // Navigation
