split papers and preprints and filter preprints > 2020 to avoid old leftovers, preprint sect. appears if any

--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -1,19 +1,51 @@
+{% set vars = {'foo': False} %}
 {% for paper in input %}
-li 
-    | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}, {% endif %}{% endfor %}#[strong {{ paper.title }}], {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
-    {% if paper.DOI -%}
-        a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
-    {% endif -%}
-    {% if paper.book -%}
-        a.paper-link book
-    {% endif -%}
-    {% if paper.URL -%}
-        a.paper-link(href="http://{{ paper.URL }}") paper
-    {% endif -%}
-    {% if paper.arxiv -%}
-        a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
-    {% endif -%}
-    {% if paper['zbmath_url'] -%}
-        a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
-    {% endif -%}
+{% if paper.type == '' and (paper.issued['date-parts'][0][0] | int) > 2020%}
+{% if not vars.foo %}
+h3.col-lg-12.text-left Preprints
+ol(reversed)
+{% endif -%}
+{% if vars.update({'foo': True}) %} {% endif %}
+    li 
+        | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}, {% endif %}{% endfor %}#[strong {{ paper.title }}], {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
+        {% if paper.DOI -%}
+            a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
+        {% endif -%}
+        {% if paper.book -%}
+            a.paper-link book
+        {% endif -%}
+        {% if paper.URL -%}
+            a.paper-link(href="http://{{ paper.URL }}") paper
+        {% endif -%}
+        {% if paper.arxiv -%}
+            a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
+        {% endif -%}
+        {% if paper['zbmath_url'] -%}
+            a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
+        {% endif -%}
+{% endif -%}
 {% endfor %}
+
+h3.col-lg-12.text-left Papers
+ol(reversed)
+        {% for paper in input %}
+        {% if paper.type != '' %}
+        li 
+            | {% for name in paper.author %}{% if loop.index > 1 %}{% if loop.last %} and {% else %}, {% endif %}{% endif %}{{ name.given }} {{ name.family }}{% if loop.last %}, {% endif %}{% endfor %}#[strong {{ paper.title }}], {% if paper.issued %} {% if paper.toappear %}to appear in{% endif %} {% if paper.type == 'article-journal' %}#[i {{ paper['container-title'] }}]{% endif %}{% if paper.toappear %},{% endif %} {% if paper.page %} {% if paper.type == 'chapter' %}#[i {{ paper['container-title'] }}], {% endif %}{% if paper.series %}{{ paper.series }},{% endif %} {{ paper.volume }}{% endif %} {% if paper.conference %}#[i {{ paper.conference }}], {% if paper.note %}{{ paper.note }},{% endif %} {% endif %} {% if paper.seminar %}#[i {{ paper.seminar }}], {% endif %} {% if paper.month %}{{ paper.month }}{% endif %} {% if paper.page %}{% if paper.type == 'article-journal' %}({% endif %}{% endif %}{{ paper.issued['date-parts'][0][0] }}{% if paper.page %}{% if paper.type == 'article-journal' %}){% endif %}{% if paper.number %} no. {{ paper.number }}{% endif %}, {% if paper.page %}{{ paper.page }}{% endif %}{% endif %}{% endif %}{% if paper.conference %}, {{ paper.address }}{% endif %}{% if paper.seminar %}, {{ paper.address }}{% endif %}. 
+            {% if paper.DOI -%}
+                a.paper-link(href="https://doi.org/{{ paper.DOI }}") publisher
+            {% endif -%}
+            {% if paper.book -%}
+                a.paper-link book
+            {% endif -%}
+            {% if paper.URL -%}
+                a.paper-link(href="http://{{ paper.URL }}") paper
+            {% endif -%}
+            {% if paper.arxiv -%}
+                a.paper-link(href="https://arxiv.org/abs/{{ paper.arxiv }}") arxiv
+            {% endif -%}
+            {% if paper['zbmath_url'] -%}
+                a.paper-link(href="{{ paper['zbmath_url'] }}") zbMath
+            {% endif -%}
+        {% endif -%}
+        {% endfor %}
