--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -62,23 +62,41 @@ html(lang='en')
                             | Welcome to my website! I'm a professor of mathematics at the University of Seville. Here, you'll mostly find information about my research.
                         p.mb-5
                         
-                            a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", title="zbMath")
+                            a.ai.icon-zbmath.ai-2x.mx-2.professional-icons(href="https://zbmath.org/authors/?q=ai:muro.fernando", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="zbMath")
                         
-                            a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", title="MathSciNet")
+                            a.ai.icon-ams.ai-2x.mx-2.professional-icons(href="https://mathscinet.ams.org/mathscinet/author?authorId=724223", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="MathSciNet")
                         
-                            a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", title="arXiv")
+                            a.ai.ai-arxiv.ai-2x.mx-2.professional-icons(href="https://arxiv.org/a/muro_f_1", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="arXiv")
                         
-                            a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", title="Google Scholar")
+                            a.ai.ai-google-scholar.ai-2x.mx-2.professional-icons(href="https://scholar.google.com/citations?user=Jh0JG3wAAAAJ", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="Google Scholar")
                         
-                            a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", title="MathOverflow")
+                            a.ai.ai-mathoverflow.ai-2x.mx-2.professional-icons(href="https://mathoverflow.net/users/12166/fernando-muro", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="MathOverflow")
                         
-                            a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", title="ORCID")
+                            a.ai.ai-orcid.ai-2x.mx-2.professional-icons(href="https://orcid.org/0000-0001-8457-9889", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="ORCID")
                         
-                            a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", title="Web of Science")
+                            a.ai.ai-clarivate.ai-2x.mx-2.professional-icons(href="http://www.webofscience.com/wos/author/record/I-5790-2015", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="Web of Science")
                         
-                            a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", title="Scopus")
+                            a.ai.ai-scopus.ai-2x.mx-2.professional-icons(href="https://www.scopus.com/authid/detail.uri?authorId=22135559400", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="Scopus")
                         
-                            a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", title="Zotero")
+                            a.ai.ai-zotero.ai-2x.mx-2.professional-icons(href="https://www.zotero.org/fmuro", data-bs-toggle="tooltip",
+                            data-bs-placement="top",
+                            data-bs-title="Zotero")
                         
                         a.btn.btn-primary.btn-xl(href='#about') Find Out More
 
