papers, preprints and presentations with cards and lots of links

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -103,11 +103,12 @@ html(lang='en')
         // Research
         section#research.page-section
             .container.px-4.px-lg-5
-                h2.text-center.mt-0 Papers, preprints, slides...
+                h2.text-center.mt-0 Papers, preprints, presentations...
                 hr.divider
                 p.text-muted.mb-3.mx-5.text-center
                     | I work on algebraic topology, specifically on homotopy theory, and I also interact with related fields such as category theory, homological algebra, K-theory, and representation theory.
                 include papers.pug
+                include presentations.pug
 
         // Portfolio
         #portfolio.bg-dark
