--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -1,6 +1,6 @@
 {% from "src/pug/_paper.j2" import paper %}
 
-{% set maximum = 4 %}
+{% set maximum = 2 %}
 
 {% set count = {'counter': 0} %}
 {% for entry in input %}
@@ -13,9 +13,9 @@ h3.col-lg-12.my-5.text-left
 {% endif -%}
     {% filter indent(width=4) %}
     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
-    {% endfilter %}
-{% elif count.counter == maximum %}
-        a.btn.btn-primary.btn-xl(href='#about') See all
+    {% endfilter -%}
+{% elif count.counter == maximum -%}
+    a.btn.btn-primary.btn-xl(href='#about') See all
 {% endif -%}
 {% if count.update({'counter': count.counter + 1}) %} {% endif %}
 {% endif -%}
@@ -31,10 +31,10 @@ h3.col-lg-12.my-5.text-left
     {% if count.counter < maximum %}
     {% filter indent(width=4) %}
     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
-    {% endfilter %}
-    {% elif count.counter == maximum %}
-        a.btn.btn-primary.btn-xl(href='#about') See all
+    {% endfilter -%}
+    {% elif count.counter == maximum -%}
+    a.btn.btn-primary.btn-xl(href='#about') See all
     {% endif -%}
-    {% if count.update({'counter': count.counter + 1}) %} {% endif %}
+    {% if count.update({'counter': count.counter + 1}) %} {% endif -%}
     {% endif -%}
     {% endfor %}
