--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -91,7 +91,9 @@ h3.col-lg-12.my-5.text-left
 
 
 
-a.btn.btn-primary.btn-xl(href='#about') See all
+
+    .text-center 
+        a.btn.btn-primary.btn-xl(href='#services') See all
 
 
 
@@ -222,7 +224,8 @@ h3.col-lg-12.my-5.text-left
                 
         
     
-    a.btn.btn-primary.btn-xl(href='#about') See all
+    .text-center 
+        a.btn.btn-primary.btn-xl(href='#services') See all
     
     
     
