--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -12,7 +12,7 @@
 
 h3.col-lg-12.my-5.text-left 
     .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 
         
     .col
@@ -91,9 +91,8 @@ h3.col-lg-12.my-5.text-left
 
 
 
-
-    .text-center 
-        a.btn.btn-primary.btn-xl(href='#services') See all
+.text-center 
+    a.btn.btn-primary.btn-xl(href='#services') See all
 
 
 
@@ -142,11 +141,11 @@ h3.col-lg-12.my-5.text-left
 
 h3.col-lg-12.my-5.text-left 
     .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4
-    
-    
-    
-    
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+
+
+
+
     
         
     .col
@@ -184,8 +183,8 @@ h3.col-lg-12.my-5.text-left
                 a.paper-link(href="https://zbmath.org/7719245") zbMath
                 
         
-    
-    
+
+
     
         
     .col
@@ -223,87 +222,86 @@ h3.col-lg-12.my-5.text-left
                 a.paper-link(href="https://zbmath.org/7700052") zbMath
                 
         
-    
-    .text-center 
-        a.btn.btn-primary.btn-xl(href='#services') See all
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
+.text-center 
+    a.btn.btn-primary.btn-xl(href='#services') See all
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
