--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -2,10 +2,10 @@
 
 h3.col-lg-12.my-5.text-left 
     .bi.bi-easel &nbsp; Presentations
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 
-    
-    
+
+
     .col
         .card.shadow.rounded.h-100
             .card-body
@@ -16,8 +16,8 @@ h3.col-lg-12.my-5.text-left
             .card-footer
                 a.paper-link(href="assets/files/presentations/Haifa2023.pdf") Presentation
                 
-    
-    
+
+
     .col
         .card.shadow.rounded.h-100
             .card-body
@@ -29,71 +29,69 @@ h3.col-lg-12.my-5.text-left
                 a.paper-link(href="assets/files/presentations/Barcelona2023.pdf") Presentation
                 a.paper-link(href="https://geoffroy.horel.org/OMG.html") Site
                 
-    
-    
-    .text-center 
-        a.btn.btn-primary.btn-xl(href='#services') See all
 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
+.text-center 
+    a.btn.btn-primary.btn-xl(href='#services') See all
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
