fix vertical spaces of papers, preprints, peresentations sections titles

--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -1,6 +1,6 @@
 
 
-h3.col-lg-12.my-5.text-left 
+h3.col-lg-12.mt-5.mb-2.text-left 
     .bi.bi-easel &nbsp; Presentations
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 
