--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -7,7 +7,7 @@
 {% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
 {% if count.counter < maximum %}
 {% if count.counter == 0 %}
-h3.col-lg-12.my-5.text-left 
+h3.col-lg-12.mt-5.mb-2.text-left 
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 {% endif -%}
@@ -23,7 +23,7 @@ h3.col-lg-12.my-5.text-left
 {% endfor %}
 
 
-h3.col-lg-12.my-5.text-left 
+h3.col-lg-12.mt-5.mb-2.text-left 
     .bi.bi-journal-check &nbsp; Papers
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 {% set count = {'counter': 0} %}
