--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -10,7 +10,7 @@
 
 
 
-h3.col-lg-12.my-5.text-left 
+h3.col-lg-12.mt-5.mb-2.text-left 
     .bi.bi-journal &nbsp; Preprints
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 
@@ -139,7 +139,7 @@ h3.col-lg-12.my-5.text-left
 
 
 
-h3.col-lg-12.my-5.text-left 
+h3.col-lg-12.mt-5.mb-2.text-left 
     .bi.bi-journal-check &nbsp; Papers
 .row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
 
