reduce PPP section vertical spacing

--- a/src/pug/papers.pug
+++ b/src/pug/papers.pug
@@ -10,9 +10,9 @@
 
 
 
-h3.col-lg-12.mt-5.mb-2.text-left 
+h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
 
         
     .col
@@ -91,7 +91,7 @@ h3.col-lg-12.mt-5.mb-2.text-left
 
 
 
-.text-center 
+.text-center.mt-2
     a.btn.btn-primary.btn-xl(href='#services') See all
 
 
@@ -139,9 +139,9 @@ h3.col-lg-12.mt-5.mb-2.text-left
 
 
 
-h3.col-lg-12.mt-5.mb-2.text-left 
+h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
 
 
 
@@ -223,7 +223,7 @@ h3.col-lg-12.mt-5.mb-2.text-left
                 
         
 
-.text-center 
+.text-center.mt-2
     a.btn.btn-primary.btn-xl(href='#services') See all
 
 
