--- a/src/pug/papers.j2
+++ b/src/pug/papers.j2
@@ -7,15 +7,15 @@
 {% if entry.type == '' and (entry.issued['date-parts'][0][0] | int) > 2020%}
 {% if count.counter < maximum %}
 {% if count.counter == 0 %}
-h3.col-lg-12.mt-5.mb-2.text-left 
+h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal &nbsp; Preprints
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
 {% endif -%}
     {% filter indent(width=4) %}
     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
     {% endfilter -%}
 {% elif count.counter == maximum -%}
-.text-center 
+.text-center.mt-2
     a.btn.btn-primary.btn-xl(href='#services') See all
 {% endif -%}
 {% if count.update({'counter': count.counter + 1}) %} {% endif %}
@@ -23,9 +23,9 @@ h3.col-lg-12.mt-5.mb-2.text-left
 {% endfor %}
 
 
-h3.col-lg-12.mt-5.mb-2.text-left 
+h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-journal-check &nbsp; Papers
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
 {% set count = {'counter': 0} %}
 {% for entry in input %}
 {% if entry.type != '' %}
@@ -34,7 +34,7 @@ h3.col-lg-12.mt-5.mb-2.text-left
     {{ paper(entry.id, entry.author, entry.title, entry.issued['date-parts'][0][0], entry.type, entry['container-title'], entry.volume, entry.number, entry.series, entry.page, entry.note, entry.DOI, entry.arxiv, entry.abstract, entry.bibtex, entry['zbmath_url']) }}
     {% endfilter -%}
 {% elif count.counter == maximum -%}
-.text-center 
+.text-center.mt-2
     a.btn.btn-primary.btn-xl(href='#services') See all
 {% endif -%}
 {% if count.update({'counter': count.counter + 1}) %} {% endif -%}
