--- a/src/pug/presentations.pug
+++ b/src/pug/presentations.pug
@@ -1,8 +1,8 @@
 
 
-h3.col-lg-12.mt-5.mb-2.text-left 
+h3.col-lg-12.mt-3.mb-3.text-left 
     .bi.bi-easel &nbsp; Presentations
-.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.my-4
+.row.row-cols-1.row-cols-xl-2.gx-5.gy-4.mb-4
 
 
 
@@ -30,7 +30,7 @@ h3.col-lg-12.mt-5.mb-2.text-left
                 a.paper-link(href="https://geoffroy.horel.org/OMG.html") Site
                 
 
-.text-center 
+.text-center.mt-2
     a.btn.btn-primary.btn-xl(href='#services') See all
 
 
